--- a/public/assets/css/inscription.css
+++ b/public/assets/css/inscription.css
@@ -444,6 +444,12 @@ body {
 .content-wrapper .card-body {
     padding: 0;
     margin-top: 20px;
+   position: relative;
+}
+.content-wrapper .card-body::before {
+    position: absolute;
+    content: " ";
+   z-index: 1;
     background-image: url("../images/Jokkolanté\ KK.png");
     background-size: 100% 100%;
     background-position: center;
