--- a/public/assets/css/services.css
+++ b/public/assets/css/services.css
@@ -6,17 +6,18 @@
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: 400;
-    clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 
 #hero h1 {
-    font-size: 60px;
+    font-size: 50px;
     line-height: 80px;
 }
 
 .texte-left,
 .texte-right {
     width: 90%;
+margin: 0;
 }
 
 .texte-right {
@@ -32,11 +33,23 @@
 }
 
 #hero p {
+    display: flex;
+    justify-content: end;
     font-size: 17px;
     line-height: 45px;
+    width: 80%;
+    margin-left: 100px;
 }
-
+.bn{
+    display: flex;
+    justify-content: center;
+    width: 60%;
+}
+.tete{
+    height: 100%;
+}
 #hero .btn {
+
     font-size: 14px;
     line-height: 32px;
     box-sizing: border-box;
@@ -47,6 +60,8 @@
 }
 
 #service {
+padding-top: 160px;
+margin-top: -150px;
     background-image: url("../images/Jok.png");
     background-size: contain;
     background-position: left;
@@ -56,14 +71,29 @@
 
 #service h1 {
     font-size: 28px;
-    line-height: 80px;
+
     color: #009EE2;
 }
+#Entrepreuneur{
+    width: 80%;
+    margin: auto;
 
+}
+ #service1 {
+
+
+
+
+}
+#service1 img {
+    width: 100%;
+  }
 #service p {
-    font-size: 26px;
+    font-size: 20px;
+    margin-top: 40px;
     line-height: 30px;
     text-align: justify;
+
 }
 
 .bnt {
@@ -109,15 +139,38 @@
 
 /* Pour les écrans d'une largeur minimale de 992 pixels */
 @media (max-width: 992px) {
+    #hero h1 {
+        font-size: 60px;
+        line-height: 80px;
+    }
 
+
+    #hero p {
+        display: flex;
+        justify-content: end;
+        font-size: 17px;
+        line-height: 45px;
+        width: 87%;
+         margin-left: 0;
+    }
+      #hero .bn {
+        margin-bottom: 20px;
+
+    }
     .col-lg-7,
     .col-lg-5 {
         width: 50%;
+    }
+    .tete{
+        padding: 0 40px 0 40px;
     }
 
     #service p {
         font-size: 15px;
         line-height: 20px;
+    }
+    #service1 {
+        padding: 20px;
     }
 
     #service h1 {
@@ -135,27 +188,29 @@
 /* Pour les écrans d'une largeur minimale de 768 pixels */
 
 /* Pour les écrans d'une largeur maximale de 767 pixels */
-@media (max-width: 768px) {
-    #hero h1 {
-        font-size: 40px;
-        line-height: 60px;
-    }
 
-    #hero p {
-        margin: 30px;
-        font-size: 14px;
-        line-height: 30px;
-    }
 
-    #hero .btn {
-        margin: 0 30px;
-        font-size: 12px;
-        line-height: 24px;
-    }
-}
 
 @media (max-width: 500px) {
+       #hero h1 {
+        font-size: 30px;
+        line-height: 40px;
+    }
 
+.tete{
+        padding: 0 10px 0 10px;
+    }
+    #hero p {
+        display: flex;
+        justify-content:center;
+        font-size: 10px;
+        line-height: 40px;
+        width: 100%;
+        margin-left: 0;
+    }
+    .bgi{
+        margin-bottom: 20px;
+    }
     .col-lg-7,
     .col-lg-5 {
         width: 100%;
@@ -175,13 +230,14 @@
         font-size: 15px;
         line-height: 22px;
         padding: 5px 20px;
+        margin-bottom: 20px;
     }
 
     .col-lg-7 img,
     .texte-right,
     .texte-left {
         width: 90%;
-        margin: 20px auto;
+        margin: 0 auto;
     }
 
     #Entrepreuneur {
@@ -189,6 +245,6 @@
     }
 
     #hero img {
-        margin-top: 20px;
+        margin-top: 10px;
     }
 }
